crates/shannon-ui/tests/snapshots/ui_snapshot_tests__cache_hit_rate.snap
---
source: crates/shannon-ui/tests/ui_snapshot_tests.rs
assertion_line: 217
expression: text
---
○ Responding [unknown · claude-sonnet-4 · standard] · [░░░░░░░░] 5.0k/200k 5.0k↑ 800↓ ↻47%                       $0.0234
 · Cache 47%
