crates/shannon-ui/tests/snapshots/ui_snapshot_tests__cache_zero_tokens.snap
---
source: crates/shannon-ui/tests/ui_snapshot_tests.rs
assertion_line: 268
expression: text
---
○ Responding [unknown · claude-sonnet-4 · standard] · [░░░░░░░░] 5.0k/200k 5.0k↑ 800↓                            $0.0234
