crates/shannon-ui/tests/snapshots/ui_snapshot_tests__chat_message_error.snap
---
source: crates/shannon-ui/tests/ui_snapshot_tests.rs
expression: "format!(\"{:#?}\", msg)"
---
ChatMessage {
    role: Tool,
    content: "Permission denied: /etc/hosts",
    timestamp: 2026-05-22T12:30:05.283992813Z,
    image_lines: None,
    is_error: true,
    tool_name: Some(
        "write",
    ),
    start_time: None,
    duration_secs: Some(
        1.5,
    ),
    spinner_frame: 0,
    folded: true,
    exit_code: Some(
        1,
    ),
    thinking_content: None,
    thinking_expanded: false,
    thinking_duration_secs: None,
    diff_stats: None,
    stats_line: None,
}
