crates/shannon-ui/tests/snapshots/ui_snapshot_tests__chat_message_text.snap
---
source: crates/shannon-ui/tests/ui_snapshot_tests.rs
expression: "format!(\"{:#?}\", msg)"
---
ChatMessage {
    role: User,
    content: "Hello, can you help me with Rust?",
    timestamp: 2026-05-22T16:18:21.134754905Z,
    image_lines: None,
    is_error: false,
    tool_name: None,
    start_time: None,
    duration_secs: None,
    spinner_frame: 0,
    folded: true,
    exit_code: None,
    thinking_content: None,
    thinking_expanded: false,
    thinking_duration_secs: None,
    diff_stats: None,
    stats_line: None,
}
