crates/shannon-ui/tests/snapshots/ui_snapshot_tests__chat_message_thinking.snap
---
source: crates/shannon-ui/tests/ui_snapshot_tests.rs
expression: "format!(\"{:#?}\", msg)"
---
ChatMessage {
    role: Assistant,
    content: "Here is the answer:",
    timestamp: 2026-01-15T12:00:00Z,
    image_lines: None,
    is_error: false,
    tool_name: None,
    start_time: None,
    duration_secs: None,
    spinner_frame: 0,
    folded: true,
    exit_code: None,
    thinking_content: Some(
        "Let me analyze the code step by step...",
    ),
    thinking_expanded: false,
    thinking_duration_secs: Some(
        3.2,
    ),
    diff_stats: None,
    stats_line: None,
}
