crates/shannon-ui/tests/snapshots/ui_snapshot_tests__chat_message_tool_call.snap
---
source: crates/shannon-ui/tests/ui_snapshot_tests.rs
expression: "format!(\"{:#?}\", msg)"
---
ChatMessage {
    role: Tool,
    content: "cargo test\nrunning 42 tests\nall passed",
    timestamp: 2026-05-24T05:45:27.863618242Z,
    image_lines: None,
    is_error: false,
    tool_name: Some(
        "bash",
    ),
    start_time: None,
    duration_secs: Some(
        1.5,
    ),
    spinner_frame: 0,
    folded: true,
    exit_code: Some(
        0,
    ),
    thinking_content: None,
    thinking_expanded: false,
    thinking_duration_secs: None,
    diff_stats: None,
    stats_line: None,
}
