crates/shannon-ui/tests/snapshots/ui_snapshot_tests__diff_stats.snap
---
source: crates/shannon-ui/tests/ui_snapshot_tests.rs
expression: "format!(\"{:#?}\", msg)"
---
ChatMessage {
    role: Tool,
    content: "src/main.rs written",
    timestamp: 2026-05-23T14:47:03.454150557Z,
    image_lines: None,
    is_error: false,
    tool_name: Some(
        "write",
    ),
    start_time: None,
    duration_secs: Some(
        1.5,
    ),
    spinner_frame: 0,
    folded: true,
    exit_code: Some(
        0,
    ),
    thinking_content: None,
    thinking_expanded: false,
    thinking_duration_secs: None,
    diff_stats: Some(
        (
            42,
            7,
        ),
    ),
    stats_line: None,
}
