crates/shannon-ui/tests/snapshots/ui_snapshot_tests__progress_indicator.snap
---
source: crates/shannon-ui/tests/ui_snapshot_tests.rs
assertion_line: 163
expression: text
---
◐ Thinking... [unknown · claude-sonnet-4 · standard] 💭 5k
